# f0x

./: .gitignore  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
src/f0x/: main.py
